Fixed input field alignment

--- a/css/login-signup.css
+++ b/css/login-signup.css
@@ -31,7 +31,6 @@
 	color: white;
 	font-size: 40px;
 	font-family: 'Gowun Batang', 'Times New Roman', serif;
-	text-align: center;
 	margin-bottom: 40px;
 	margin-top: -40px;
 }
@@ -42,7 +41,7 @@
 .input-group {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	text-align: center;
 	width: 100%;
 }
 
@@ -56,7 +55,9 @@
 }
 
 .input-group > input {
-	width: 80%;
+	width: stretch;
+	margin-left: 10%;
+	margin-right: 10%;
 	height: 7px;
 	padding: 10px;
 	margin-bottom: 15px;
@@ -83,6 +84,7 @@
 	font-family: 'Gowun Batang', 'Times New Roman', serif;
     font-size: 15px;
 	font-style: italic;
+	text-align: justify-all;
 	padding-left: 1.5em;
 	padding-right: 1.5em;
 }
@@ -141,6 +143,29 @@
 .form-align-l-name {
 	grid-area: 2/2/3/3;
 }
+
+.form-align-f-name > input {
+	margin-left: 20%;
+	margin-right: 5%;
+}
+
+.form-align-l-name > input {
+	margin-right: 20%;
+	margin-left: 5%;
+}
+
+.form-align-f-name > label,
+.form-align-f-name > p1 {
+	padding-left: 20%;
+	padding-right: 5%;
+}
+
+.form-align-l-name > label,
+.form-align-l-name > p1 {
+	padding-right: 20%;
+	padding-left: 5%;
+}
+
 
 .form-align-username {
 	grid-area: 3/1/4/3;
